# omarepo

./: .gitignore  README.md  pyproject.toml
osa2/nhl-statistics-1/: .coverage
osa2/nhl-statistics-1/src/: index.py
osa2/project_reader/src/: project_reader.py
osa3/hello-docker/: Dockerfile  hello.py
osa3/robot-framework/hello-robot/: log.html  output.xml  report.html
osa3/robot-framework/login-robot/: log.html  output.xml  report.html
osa3/robot-framework/login-robot/src/: AppLibrary.py
osa3/robot-framework/login-robot/src/services/: user_service.py
osa3/robot-framework/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/: retro.md
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
osa4/nhl-statistics-1/src/tests/: player_test.py
osa4/poetry-web/: pyproject.toml
